# ava

./: .clang-format  .clang-tidy  .flake8  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  generate.py  index.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
cava/: .gitignore  CMakeLists.txt  README.md  lapis.md  nwcc  requirements.txt
cava/headers/: GTILib.h  cublas_cpp.h  cudart_nw_internal.h  demo.h  hip_cpp_bridge.h  mvnc.h  nw_kern_info.h
cava/nightwatch/: __init__.py  annotation_set.py  c_dsl.py  extension.py  indent.py  main.py  model.py
cava/nightwatch/generator/: __init__.py  common.py  header.py
cava/nightwatch/generator/c/: buffer_handling.py  callee.py  caller.py  cmakelists.py  command_handler.py  guestlib.py  instrumentation.py  makefile.py  printer.py  replay.py  stubs.py  util.py  worker.py
cava/nightwatch/generator/python/: guestlib.py
cava/nightwatch/parser/: __init__.py
cava/nightwatch/parser/c/: __init__.py  clanginterface.py  nightwatch.h  reload_libclang.py  rules.py  util.py
cava/nightwatch/parser/python/: __init__.py  model_ext.py
cava/samples/: cuda.async.nw.c  cuda.nw.c  cudart.dump.c  cudart.nw.c  cudart.opt.c  gti.nw.cpp  mvnc.async.nw.c  opencl.nw.c  opencl.sched.c  opencl_sched.nw.c  qat.nozcopy.nw.c
cava/samples/amorphos/: CMakeLists.txt  fpga.c  fpga.nw.c
cava/samples/cuda/: CMakeLists.txt  cuda.async.nw.c  cuda_driver.c  cudart.dump.c
cava/samples/cuda_common_spec/: cudadrv_unimplemented.h  cudart.h  cudart_unimplemented.h  cudnn.h  cudnn_unimplemented.h  cufft_unimplemented.h  curand.h  curand_unimplemented.h  cusolver_unimplemented.h
cava/samples/cuda_common_spec/cublas/: blas1_unimplemented.h  blas2_unimplemented.h  blas3.h  blas3_unimplemented.h  blas_like_ext.h  blas_like_ext_unimplemented.h  cublas.h  cublas_unimplemented.h
cava/samples/cuda_common_spec/cusparse/: csr2csc_unimplemented.h  cusparse.h  cusparse_unimplemented.h  matrix_sorting_unimplemented.h  preconditioner_unimplemented.h  sparse_format_conversion_unimplemented.h  sparse_level1_unimplemented.h  sparse_level2_unimplemented.h  sparse_level3_unimplemented.h  sparse_level4_unimplemented.h
cava/samples/cudadrv/: CMakeLists.txt  cuda_driver.c
cava/samples/cudart/: CMakeLists.txt  cudart.c  cudart.cpp  cudart_dump.c  cudart_opt.c
cava/samples/cudnn/: CMakeLists.txt  cudnn.v7.c
cava/samples/demo/: CMakeLists.txt  demo.c
cava/samples/demo/test_program/: Makefile  test.c
cava/samples/deprecated/amorphos/: CMakeLists.txt  fpga.c
cava/samples/deprecated/hip/: hip.cpp  hip_cpp_bridge.cpp
cava/samples/gti/: CMakeLists.txt  README  gti.cpp
cava/samples/hip/: CMakeLists.txt  hip.nw.cpp  hip_cpp_bridge.cpp
cava/samples/ncsdk/: CMakeLists.txt  README  mvnc.c  mvnc.nw.c
cava/samples/onnxruntime/: CMakeLists.txt  README.md  cudart.onnx.dump.c  cudart.onnx.opt.c  onnx_dump.c  onnx_dump.cpp  onnx_opt.c  onnx_opt.cpp
cava/samples/opencl/: CMakeLists.txt  README  opencl.async.nw.c  opencl.c  opencl.sched.c
cava/samples/pytorch/: CMakeLists.txt  README.md  pt_dump.c  pt_dump.cpp  pt_opt.c  pt_opt.cpp
cava/samples/quickassist/: CMakeLists.txt  README  qat.c  qat.nozcopy.c  qat.nw.c
cava/samples/tensorflow/: CMakeLists.txt  README.md  tf_dump.c  tf_dump.cpp  tf_opt.c  tf_opt.cpp
cava/samples/tensorflow_c/: CMakeLists.txt  README.md  tensorflow.nw.c  tf_c.c
cava/samples/test/: CMakeLists.txt  libtrivial.c  libtrivial.nw.c
common/: cmd_channel.c  cmd_channel.cpp  cmd_channel_hv.c  cmd_channel_hv.cpp  cmd_channel_impl.hpp  cmd_channel_record.c  cmd_channel_record.cpp  cmd_channel_shm.c  cmd_channel_shm_worker.c  cmd_channel_shm_worker.cpp  cmd_channel_socket.c  cmd_channel_socket_tcp.cpp  cmd_channel_socket_utilities.cpp  cmd_channel_socket_utilities.h  cmd_channel_socket_utilities.hpp  cmd_channel_socket_vsock.cpp  cmd_handler.c  cmd_handler.cpp  cmd_handler.hpp  cmd_queue.cpp  cmd_queue.h  common_context.cpp  common_context.h  declaration.h  devconf.h  endpoint_lib.c  endpoint_lib.cpp  endpoint_lib.hpp  guest_context.h  linkage.h  logging.cpp  logging.h  macro.h  murmur3.c  shadow_thread_pool.c  shadow_thread_pool.cpp  shadow_thread_pool.hpp  socket.c  socket.cpp  std_span.h  (+3 more)
config/: README.md  conanfile.txt  guest.conf  guest.conf.example  setup.sh
docs/: a_guide_to_ava.md  build_and_setup.md  generate_code.md  virtualize_new_api.md  write_a_specification.md
guestdrv/: .gitmodules  vgpu_ldd.c  zcopy_guestlib.c
guestlib/: .gitignore  cmd_channel_socket_tcp.cpp  guest_config.cpp  guest_config.h  guest_context.cpp  guest_context.h  guest_thread.cpp  guest_thread.h  guestlib.h  (+5 more)
proto/: CMakeLists.txt  manager_service.cpp  manager_service.fbs  manager_service.h  manager_service.proto  manager_service.proto.cpp  manager_service.proto.h
tools/dump_combinator/: CMakeLists.txt  dump_combinator.cpp
worker/: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  argument_parser.cpp  cmd_channel_shm.cpp  cmd_channel_socket_tcp.cpp  flags.h  manager.c  manager_service.cpp  manager_service.hpp  manager_tcp.c  provision_gpu.cpp  provision_gpu.h  signal_handler.cpp  signal_handler.h  worker.cpp  worker.h  worker_context.cpp  worker_context.h
worker/demo/: CMakeLists.txt  README.md  manager.cpp
worker/extensions/: cmd_batching.c  cmd_batching.cpp  cudnn_optimization.c  cudnn_optimization.cpp  migration_barrier.c  tf_optimization.c  tf_optimization.cpp
worker/files/exported/: graph.pb  graph.pb_txt  my_model.data-00000-of-00001  my_model.index
worker/galvanic/: CMakeLists.txt  README.md  daemon_service.fbs  manager.cpp  manager.h  spawn_daemon.cpp
worker/include/: apifwd.h  argument_parser.hpp  manager_service.h  manager_service.hpp  maptable.h  object_list.h  provision_gpu.h  signal_handler.h  worker.h
worker/katana/: CMakeLists.txt  README.md  daemon_service.fbs  manager.cpp  manager.h  spawn_daemon.cpp
worker/legacy/: CMakeLists.txt  README.md  manager.cpp
worker/nvidia_gpu/: CMakeLists.txt  gpu_example  manager_nv.cpp  run_worker.sh
(+161 files in other folders)
